[gd_scene load_steps=2 format=3 uid="uid://dxy0xc8yoy8db"]

[ext_resource type="Script" path="res://addons/godot_vn/vn_editor/manage_char_popup.gd" id="1_cvli6"]

[node name="ManageCharPopup" type="PopupPanel"]
title = "Manage Characters"
size = Vector2i(250, 275)
visible = true
unresizable = false
min_size = Vector2i(200, 200)
script = ExtResource("1_cvli6")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 246.0
offset_bottom = 271.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = " Manage Characters"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NewCharEdit" type="LineEdit" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "character name here..."
expand_to_text_length = true

[node name="NewCharTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[connection signal="text_changed" from="PanelContainer/ScrollContainer/VBoxContainer/NewCharEdit" to="." method="_on_new_char_edit_text_changed"]
[connection signal="timeout" from="NewCharTimer" to="." method="_on_new_char_timer_timeout"]
